--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,11 +15,32 @@
   overflow: hidden;
 }
 
-.margin {
+/* .margin {
   margin-top: 4rem;
   margin-left: 10rem;
-}
+} */
 .font {
   font-family: wfont_044ec0_8a940bae2f2740e789023089a84fc84d,
     wf_8a940bae2f2740e789023089a, orig_poppins_regular;
+}
+
+.video-wrapper {
+  position: relative;
+  background-color: #1a1a1a; /* Dark background color */
+}
+
+.video-wrapper::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.6
+  ); /* Dark background color with some transparency */
+  z-index: 1; /* Make sure the overlay is below the text */
 }
