--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,8 +20,8 @@
   margin-left: 10rem;
 } */
 .font {
-  font-family: wfont_044ec0_8a940bae2f2740e789023089a84fc84d,
-    wf_8a940bae2f2740e789023089a, orig_poppins_regular;
+  font-style: normal;
+  font-family: wfont_044ec0_8a940bae2f2740e789023089a84fc84d;
 }
 
 .video-wrapper {
