--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,8 +29,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(
     0,
     0,
