--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 
 .video-element {
   width: 100%;
-  height: 70vh;
+  height: 95vh;
   object-fit: cover;
   z-index: -1;
   overflow: hidden;
@@ -52,11 +52,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.459
-  ); /* Dark background color with some transparency */
+  background-color: rgba(2, 2, 2, 0.8);
+  /* Dark background color with some transparency */
   z-index: 1; /* Make sure the overlay is below the text */
 }
