--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@
   content: "";
   position: absolute;
   top: 0;
-  left: 0;
+  left: 10;
   width: 100vw;
   height: 120vh;
   background-color: rgba(
@@ -58,4 +58,140 @@
   background-color: rgba(2, 2, 2, 0.8);
   /* Dark background color with some transparency */
   z-index: 1; /* Make sure the overlay is below the text */
+}
+
+.navigation {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  height: 70px;
+  width: 100%;
+  padding: 1.5rem 0rem;
+  padding-left: 8%;
+  padding-right: 8%;
+  background: #fff;
+  color: black;
+  box-shadow: 10px 2px 8px grey;
+  z-index: 99999;
+}
+
+.brand-name {
+  text-decoration: none;
+  color: black;
+}
+
+.navigation-menu {
+  /* margin-left: auto; */
+  align-items: center;
+  flex-grow: 1;
+}
+
+.navigation-menu .navigation-links {
+  display: flex;
+  padding: 0;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navigation-menu .navigation-links ul {
+  display: flex;
+}
+
+.navigation-menu li {
+  list-style-type: none;
+  margin: 0 2rem;
+}
+
+.navigation-menu li a {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+}
+/* .navigation-buttons {
+  padding-right: "100px";
+} */
+
+.hamburger {
+  border: 0;
+  height: 40px;
+  width: 40px;
+  padding: 0.5rem;
+  border-radius: 50%;
+  background-color: #283b8b;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  display: none;
+}
+
+.hamburger:hover {
+  background-color: #2642af;
+}
+
+@media screen and (max-width: 1180px) {
+  .hamburger {
+    display: block;
+  }
+
+  .navigation-menu .navigation-links {
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    border-top: 1px solid black;
+    display: none;
+  }
+
+  .navigation-menu .navigation-links ul {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navigation-menu .navigation-links .navigation-buttons {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navigation-menu .navigation-links .navigation-buttons a {
+    border-bottom: 1px solid black;
+    padding: 0.7rem;
+  }
+
+  .navigation-menu .navigation-links li {
+    text-align: center;
+    margin: 0;
+  }
+
+  .navigation-menu .navigation-links li a {
+    color: black;
+    width: 100%;
+    padding: 1.1rem 0;
+    border-bottom: 1px solid black;
+  }
+
+  .navigation-menu .navigation-links a {
+    text-align: center;
+    margin: 0;
+  }
+
+  .navigation-menu li:hover {
+    background-color: #ebedf0;
+  }
+
+  .navigation-buttons :hover {
+    background-color: #ebedf0;
+  }
+
+  .navigation-menu.expanded .navigation-links {
+    display: block;
+  }
+  .navigation-links {
+    display: flex;
+    flex-direction: column;
+  }
 }
