--- a/styles/globals.css
+++ b/styles/globals.css
@@ -231,15 +231,13 @@
   flex-direction: column;
   align-items: center;
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 0.5px solid black;
+  border-radius: 15px;
   margin: 5px;
   cursor: pointer;
 }
 
-.day:hover {
-  background-color: #f0f0f0;
-}
+
 
 .sunday {
   background-color: #ffcccc; /* or any other background color you prefer */
